--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <p>Um curso que explora os benefícios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer
         linguagem, em qualquer plataforma.</p>
-    <p>Novo paragráfo adicionado comforme pediu o exercício</p>    
+    <p>Novo paragráfo adicionado conforme pediu o exercício</p>    
     
     <h3>Principais benefícios:</h3>
     <ul>
